--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,21 @@ layout: default
 
   <div class="entry">
     {{ content }}
-  </div>
 
+    {% assign category = site.my_categories | where: "slug", post.category %}
+    {% assign category = category[0] %}
+    {% if category %}
+        {% capture category_content %}<a class="label" href="{{ category.url }}">{{ category.name }}</a>{% endcapture %}
+    {% endif %}
+
+    {% if category_content %}
+    <p class="m-t-3 text-muted font-italic">
+      <small>Posted in </small>{{ category_content }}
+    </p>
+    {% endif %}
+
+  </div>
+  
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
