--- a/_layouts/blog_by_category.html
+++ b/_layouts/blog_by_category.html
@@ -3,13 +3,13 @@ layout: default
 ---
 
 
-<h1>Articles by category: {{ page.slug }}</h1>
+<h1>Articles by category: {{ page.name }}</h1>
 
   {% if site.categories[page.slug] %}
     {% for post in site.categories[page.slug] %}
       {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if forloop.first %}
-        <h3 class="m-t-3 m-b-1">{{ post_year }}</h3>
+        <h3 class="highlight">{{ post_year }}</h3>
         <div class="list-group">
       {% endif %}
       {% unless forloop.first %}
@@ -17,12 +17,12 @@ layout: default
         {% capture previous_post_year %}{{ site.categories[page.slug][previous_index].date | date: '%Y' }}{% endcapture %}
         {% if post_year != previous_post_year %}
           </div>
-          <h3 class="m-t-3 m-b-1">{{ post_year }}</h3>
+          <h3 class="highlight">{{ post_year }}</h3>
           <div class="list-group">
         {% endif %}
       {% endunless %}
       <a href="{{ post.url }}" class="list-group-item">
-        <h4 class="list-group-item-heading h6">{{ post.title }}</h4>
+         > {{ post.title }}
       </a>
       {% if forloop.last %}
         </div>
